{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 702,
  "lineage": "238d578d-dcc7-10b0-8501-e7d11e21bc41",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-02-12T00:00:32.610-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/projectvpcpoc-2/global/firewalls/fw-allow-http",
            "log_config": [],
            "name": "fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/projectvpcpoc-2/global/networks/vpc-network",
            "priority": 1000,
            "project": "projectvpcpoc-2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/projectvpcpoc-2/global/firewalls/fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-02-12T00:00:32.613-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/projectvpcpoc-2/global/firewalls/fw-allow-ssh",
            "log_config": [],
            "name": "fw-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/projectvpcpoc-2/global/networks/vpc-network",
            "priority": 1000,
            "project": "projectvpcpoc-2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/projectvpcpoc-2/global/firewalls/fw-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw-iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-02-12T00:00:32.605-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/projectvpcpoc-2/global/firewalls/fw-allow-iap-hc",
            "log_config": [],
            "name": "fw-allow-iap-hc",
            "network": "https://www.googleapis.com/compute/v1/projects/projectvpcpoc-2/global/networks/vpc-network",
            "priority": 1000,
            "project": "projectvpcpoc-2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/projectvpcpoc-2/global/firewalls/fw-allow-iap-hc",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16",
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "google_compute_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2022-02-12T00:02:35.317-08:00",
            "id": "projects/projectvpcpoc-2/regions/us-central1/forwardingRules/forwarding-rule",
            "ip_address": "10.0.1.3",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "INTERNAL_MANAGED",
            "name": "forwarding-rule",
            "network": "projects/projectvpcpoc-2/global/networks/vpc-network",
            "network_tier": "PREMIUM",
            "port_range": "80",
            "project": "projectvpcpoc-2",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/projectvpcpoc-2/regions/us-central1/forwardingRules/forwarding-rule",
            "subnetwork": "projects/projectvpcpoc-2/regions/us-central1/subnetworks/backend-subnet1",
            "target": "projects/projectvpcpoc-2/regions/us-central1/targetHttpProxies/target-http-proxy"
          },
          "dependencies": [
            "google_compute_disk.persistent",
            "google_compute_health_check.health",
            "google_compute_instance_template.instance_template",
            "google_compute_network.vpc_network",
            "google_compute_region_backend_service.default",
            "google_compute_region_instance_group_manager.mig",
            "google_compute_region_target_http_proxy.default",
            "google_compute_region_url_map.default",
            "google_compute_resource_policy.scheduled-policy",
            "google_compute_subnetwork.subnet1",
            "google_compute_subnetwork.subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "attached_disk": [
              {
                "device_name": "persistent-disk-1",
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/projectvpcpoc-2/zones/us-central1-a/disks/test-disk"
              }
            ],
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20220118",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/projectvpcpoc-2/zones/us-central1-a/disks/instance1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/projectvpcpoc-2/zones/us-central1-a/instances/instance1",
            "instance_id": "5774657483384215508",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "IUJ7_tMs7Ro=",
            "metadata_startup_script": "sudo apt-get update \u0026\u0026 sudo apt-get install apache2 -y \u0026\u0026 echo '\u003c!doctype html\u003e\u003chtml\u003e\u003cbody\u003e\u003ch1\u003eApache is running\u003c/h1\u003e\u003c/body\u003e\u003c/html\u003e' | sudo tee /var/www/html/index.html",
            "name": "instance1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.223.77.174",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/projectvpcpoc-2/global/networks/vpc-network",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/projectvpcpoc-2/regions/us-central1/subnetworks/backend-subnet1",
                "subnetwork_project": "projectvpcpoc-2"
              }
            ],
            "project": "projectvpcpoc-2",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/projectvpcpoc-2/zones/us-central1-a/instances/instance1",
            "tags": [
              "http-server"
            ],
            "tags_fingerprint": "FYLDgkTKlA4=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_disk.persistent",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/projectvpcpoc-2/global/networks/vpc-network",
            "mtu": 0,
            "name": "vpc-network",
            "project": "projectvpcpoc-2",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/projectvpcpoc-2/global/networks/vpc-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/projectvpcpoc-2/regions/us-central1/instanceGroups/mig1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2022-02-12T00:01:34.933-08:00",
            "enable_cdn": false,
            "fingerprint": "fTOkLHl3mtQ=",
            "health_checks": [
              "projects/projectvpcpoc-2/global/healthChecks/autohealing"
            ],
            "id": "projects/projectvpcpoc-2/regions/us-central1/backendServices/ilb-backend-service",
            "load_balancing_scheme": "INTERNAL_MANAGED",
            "name": "ilb-backend-service",
            "port_name": "http",
            "project": "projectvpcpoc-2",
            "protocol": "HTTP",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/projectvpcpoc-2/regions/us-central1/backendServices/ilb-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_disk.persistent",
            "google_compute_health_check.health",
            "google_compute_instance_template.instance_template",
            "google_compute_network.vpc_network",
            "google_compute_region_instance_group_manager.mig",
            "google_compute_resource_policy.scheduled-policy",
            "google_compute_subnetwork.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-02-12T00:02:08.763-08:00",
            "default_service": "https://www.googleapis.com/compute/v1/projects/projectvpcpoc-2/regions/us-central1/backendServices/ilb-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "xY60ycXEVe8=",
            "host_rule": [],
            "id": "projects/projectvpcpoc-2/regions/us-central1/urlMaps/regional-url-map",
            "map_id": 5746460249991862127,
            "name": "regional-url-map",
            "path_matcher": [],
            "project": "projectvpcpoc-2",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/projectvpcpoc-2/regions/us-central1/urlMaps/regional-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_disk.persistent",
            "google_compute_health_check.health",
            "google_compute_instance_template.instance_template",
            "google_compute_network.vpc_network",
            "google_compute_region_backend_service.default",
            "google_compute_region_instance_group_manager.mig",
            "google_compute_resource_policy.scheduled-policy",
            "google_compute_subnetwork.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-02-12T00:00:34.081-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/projectvpcpoc-2/regions/us-central1/subnetworks/backend-subnet1",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "backend-subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/projectvpcpoc-2/global/networks/vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "projectvpcpoc-2",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/projectvpcpoc-2/regions/us-central1/subnetworks/backend-subnet1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-02-12T00:00:33.130-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/projectvpcpoc-2/regions/us-central1/subnetworks/proxy-subnet1",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "proxy-subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/projectvpcpoc-2/global/networks/vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "projectvpcpoc-2",
            "purpose": "INTERNAL_HTTPS_LOAD_BALANCER",
            "region": "us-central1",
            "role": "ACTIVE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/projectvpcpoc-2/regions/us-central1/subnetworks/proxy-subnet1",
            "stack_type": "UNSPECIFIED_STACK_TYPE"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}